[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/TitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://states/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://states/Game/ParallaxBackground.tscn" type="PackedScene" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]
offset = Vector2( 0, 500 )
transform = Transform2D( 1, 0, 0, 1, 0, 500 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -163.0
margin_right = 203.0
margin_bottom = 163.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 406.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 1 )
text = "Godot Jump"

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 103.0
margin_top = 176.0
margin_right = 303.0
margin_bottom = 381.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
custom_constants/separation = 15

[node name="PlayButton" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 200.0
margin_bottom = 40.0
text = "Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 55.0
margin_right = 200.0
margin_bottom = 95.0
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 110.0
margin_right = 200.0
margin_bottom = 150.0
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 165.0
margin_right = 200.0
margin_bottom = 205.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
